# PedalBuild

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_TOOLS.md  CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.md  PROJECT_STATUS.md  PYTHON_DEVELOPMENT.md  PYTHON_SETUP.md  QUICKSTART.md  README.md  TOOLING_DECISIONS.md  package.json  pyproject.toml
.claude/agents/: breadboard-layout.md  pedalpcb-scraper.md  schematic-analyzer.md
.claude/skills/bom-manager/: SKILL.md
.claude/skills/component-inventory/: SKILL.md
.claude/skills/excel-importer/: SKILL.md
docs/: API_DOCUMENTATION.md  BACKEND_COMPLETE_ARCHIVE.md  ELECTRONICS_REFERENCE.md
scripts/: generate-types.py  setup-db.py  validate-types.py
src/backend/: db.py  main.py
src/backend/routes/: bom.py  import_routes.py  inventory.py
src/backend/services/: bom_manager.py  component_inventory.py  excel_importer.py
src/db/: schema.sql
src/models/: types.generated.ts  types.py  types.ts
tests/: __init__.py  conftest.py  test_api.py
